added admin layout and created image polymorphic

--- a/app/assets/stylesheets/admin.css.scss
+++ b/app/assets/stylesheets/admin.css.scss
@@ -1,6 +1,8 @@
 /*
 *= require font-awesome
 *= require AdminLTE
+*= require skin-black
+*= require dropify
 *= require_self
 *= require ./share/spacing
 */
