--- a/app/views/admin/portfolios/_form.html.erb
+++ b/app/views/admin/portfolios/_form.html.erb
@@ -1,28 +1,33 @@
-<%= form_for admin_portfolio do |f| %>
-  <ul class="nav nav-pills my-xs-20" role="tablist">
-    <li class="active"><a role="tab" href="#basics_zh_tw" data-toggle="tab">中文</a></li>
+<%= simple_form_for admin_portfolio do |f| %>
+  <ul class="nav nav-tabs nav-justified my-xs-20" role="tablist">
+    <li class="active"><a role="tab" href="#basics_zh_tw" data-toggle="tab">繁中</a></li>
+    <li ><a role="tab" href="#basics_zh_cn" data-toggle="tab">簡中</a></li>
     <li ><a role="tab" href="#basics_en" data-toggle="tab">英文</a></li>
   </ul>
   <div class="tab-content mt-xs-20">
-    <% {zh_tw: 'active', en: 'fade'}.each do |key, value| %>
+    <% {zh_tw: 'active', zh_cn: 'fade', en: 'fade'}.each do |key, value| %>
     <div role="tabpanel" class="tab-pane <%= value %>" id="basics_<%= key %>">
       <div class="form-group">
-        <%= f.label "title_#{key}", "標題*" %>
-        <%= f.text_field "title_#{key}", class: "form-control" %>
+        <%= f.input :"title_#{key}", label: '標題*', class: "form-control" %>
       </div>
       <div class="form-group">
-        <%= f.label "description_#{key}", "敘述" %>
-        <%= f.text_field "description_#{key}", class: "form-control" %>
+        <%= f.input :"description_#{key}", label: '說明*', class: "form-control" %>
       </div>
     </div>
     <% end %>
     <div class="form-group">
-      <%= f.label :permalink, "連結*" %>
-      <%= f.text_field :permalink, class: "form-control" %>
+      <%= f.input :video_src, label: '影片連結', class: "form-control" %>
     </div>
-    
+    <div class="form-group">
+      <%= f.input :permalink, label: '網址連結', class: "form-control" %>
+    </div>
+    <div class="form-group">
+      <%= f.simple_fields_for :image do |i| %>
+      <%= i.file_field :src, 'data-default-file': admin_portfolio.image.src, data: {'max-file-size': '200k'}, class: "dropify" %>
+      <% end %>
+    </div>
   </div>
   <%= f.submit "確認送出", class: "btn btn-primary form-control mt-xs-20" %>
   <%= link_to "取消", admin_portfolios_path, class: "btn btn-default form-control mt-xs-20" %>
 <% end %>
-<%#= render 'layouts/dropify' %>
+<%= render 'layouts/admin/dropify' %>
