--- a/app/views/admin/portfolios/index.html.erb
+++ b/app/views/admin/portfolios/index.html.erb
@@ -1,1 +1,54 @@
-<h1>hello</h1>
+<%= link_to "Add New", new_admin_portfolio_path, class: "btn btn-default btn-add-new" %>
+<table class="table xs-transform mt-xs-20">
+  <thead class="hidden-xs">
+    <tr>
+      <td class="col-sm-1"></td>
+      <td class="col-sm-2">圖片</td>
+      <td class="col-sm-3">標題</td>
+      <td class="col-sm-3">敘述</td>
+      <td class="col-sm-2">Vimeo</td>
+      <td class="col-sm-1"></td>
+    </tr>
+  </thead>
+  <tbody class="sortable">
+    <% @admin_portfolios.each_with_sortable_id do |portfolio, sortable_id|%>
+    <tr id="<%= sortable_id %>">
+      <td class="col-sm-1 text-center"><i class="fa fa-arrows fa-2x"></i></td>
+      <td class="col-sm-2"><%= admin_index_image portfolio %></td>
+      <td class="col-sm-3"><%= portfolio.title %></td>
+      <td class="col-sm-3"><%= portfolio.description %></td>
+      <td class="col-sm-2"><%= link_to 'Vimeo', vimeo_url(portfolio.video_src), class: 'btn btn-default btn-pseudo' %></td>
+      <td class="col-sm-1 text-center">
+        <%= link_to edit_admin_portfolio_path(portfolio), class: "btn btn-primary" do %>
+          <i class="fa fa-pencil fa-fw"></i>
+        <% end %> 
+        <%= link_to admin_portfolio_path(portfolio), method: "delete",
+            data: { confirm: "確認刪除?" }, class: "btn btn-danger" do %>
+          <i class="fa fa-trash fa-fw"></i>
+        <% end %>
+      </td>
+    </tr>
+    <%end%>
+  </tbody>
+</table>
+
+<script type="text/javascript">
+  $(function() {
+    $('.sortable').railsSortable();
+  });
+
+  // $('.highlight_state').each(function() {
+  //   if ($(this).text() == '精選'){
+  //     $(this).addClass("btn-success");}  
+  // });
+  
+  // $('.highlight_state').on('click', function(){
+  //   var state = $(this).text();
+  //   if (state == '精選'){
+  //     $(this).text('一般').toggleClass('btn-success');
+  //   }
+  //   else if (state == '一般'){
+  //     $(this).text('精選').toggleClass('btn-success');
+  //   };
+  // })
+</script>
