setup multi lang

--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -72,7 +72,7 @@
         <li>
           <%= link_to admin_portfolios_path do%>
             <%= content_tag :i, '', class: 'fa fa-cog' %>
-            <%= content_tag :span, '作品集' %>
+            <%= content_tag :span, '作品集管理' %>
           <% end %>
         </li>
       </ul>
@@ -83,7 +83,7 @@
   <!-- Content Wrapper. Contains page content -->
   <div class="content-wrapper">
     <!-- Main content -->
-    <section class="content container">
+    <section class="content container-fluid">
     <div id="notification" class="form-group text-center">  
       <%#= notice_msg %>
     </div>
