--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -1,4 +1,6 @@
 <% @portfolios.each do |port| %>
-<%= port.title %>
-<%= port.descirption %>  
+<div>
+  <h1><%= port.title %></h1>
+  <p><%= port.description %></p>
+</div>
 <% end %>
