--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -72,7 +72,19 @@
         <li>
           <%= link_to admin_portfolios_path do%>
             <%= content_tag :i, '', class: 'fa fa-cog' %>
-            <%= content_tag :span, '作品集管理' %>
+            <%= content_tag :span, '作品集' %>
+          <% end %>
+        </li>
+        <li>
+          <%= link_to admin_teams_path do%>
+            <%= content_tag :i, '', class: 'fa fa-cog' %>
+            <%= content_tag :span, '團隊' %>
+          <% end %>
+        </li>
+        <li>
+          <%= link_to admin_clients_path do%>
+            <%= content_tag :i, '', class: 'fa fa-cog' %>
+            <%= content_tag :span, '客戶' %>
           <% end %>
         </li>
       </ul>
