--- a/app/views/inquiries/_form.html.erb
+++ b/app/views/inquiries/_form.html.erb
@@ -21,7 +21,7 @@
       <%= recaptcha_tags %>  
     </div>
     <div class="form-group col-sm-6">
-      <%= f.submit t('frontend.button.submit'), class: "btn btn-md btn-style-2 width-100" %>
+      <%= f.submit t('frontend.buttons.submit'), class: "btn btn-md btn-style-2 width-100" %>
     </div>
   </div>
 <% end %>
