--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -110,6 +110,12 @@
             <%= content_tag :span, '系統設定' %>
           <% end %>
         </li>
+        <li>
+          <%= link_to admin_translations_path do%>
+            <%= content_tag :i, '', class: 'fa fa-cog' %>
+            <%= content_tag :span, '語言管理' %>
+          <% end %>
+        </li>
       </ul>
       <!-- /.sidebar-menu -->
     </section>
