--- a/app/views/inquiries/_form.html.erb
+++ b/app/views/inquiries/_form.html.erb
@@ -14,6 +14,10 @@
       <%= f.text_field :email, class: "form-control" %> 
     </div>
     <div class="form-group col-sm-12">
+      <%= f.label :subject, t('frontend.contact.subject'+'*') %>
+      <%= f.text_field :subject, class: "form-control" %>
+    </div>
+    <div class="form-group col-sm-12">
       <%= f.label :message, t('frontend.contact.message'+'*') %>
       <%= f.text_area :message, class: "text-area form-control" %>
     </div>
@@ -21,7 +25,7 @@
       <%= recaptcha_tags %>  
     </div>
     <div class="form-group col-sm-6">
-      <%= f.submit t('frontend.buttons.submit'), class: "btn btn-md btn-style-2 width-100" %>
+      <%= f.submit t('frontend.buttons.submit'), class: "btn btn-default btn-md btn-style-2 width-100" %>
     </div>
   </div>
 <% end %>
