--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="<%= I18n.locale %>">
   <head>
-    <title>Amf</title>
-    <%= csrf_meta_tags %>
-
+    <%= page_title @site_name, @title %>
+    <link rel="canonical" href="<%= request.url %>" />
+    <link rel="icon"      href="<%= @favicon %>" type="image/png"/>
+    <%= meta_desc_tag @meta_desc %>
+    <%= og_tag @og %>
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <%= csrf_meta_tags %>
   </head>
 
   <body>
