created frontend nav and footer

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,6 +1,8 @@
 /*
  *
  *= require_self
+ *= require themify
+ *= require theme
  *= require venobox
  *= require ./share/spacing
  *= require font-awesome
