--- a/app/views/admin/clients/_form.html.erb
+++ b/app/views/admin/clients/_form.html.erb
@@ -11,7 +11,7 @@
         <%= f.input :"name_#{key}", label: '名稱*', class: "form-control" %>
       </div>
       <div class="form-group">
-        <%= f.input :"description_#{key}", label: '介紹*', as: :text, class: "form-control" %>
+        <%= f.input :"description_#{key}", label: '說明', as: :text, class: "form-control" %>
       </div>
     </div>
     <% end %>
