--- a/app/views/admin/teams/index.html.erb
+++ b/app/views/admin/teams/index.html.erb
@@ -12,7 +12,7 @@
     <% @admin_teams.each_with_sortable_id do |team, sortable_id|%>
     <tr id="<%= sortable_id %>">
       <td class="col-sm-1 text-center"><i class="fa fa-arrows fa-2x"></i></td>
-      <td class="col-sm-2"><%= admin_index_image team %></td>
+      <td class="col-sm-2"><div class="col-sm-10 col-sm-offset-1"><%= admin_index_image team %></div></td>
       <td class="col-sm-3"><%= team.name %></td>
       <td class="col-sm-4"><%= team.description %></td>
       <td class="col-sm-2 text-center">
