--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -17,7 +17,7 @@
   <!-- Main Header -->
   <header class="main-header">
     <!-- Logo -->
-    <a href="index2.html" class="logo">
+    <a href="#" class="logo">
       <!-- mini logo for sidebar mini 50x50 pixels -->
       <span class="logo-mini"><b>AMF</b></span>
       <!-- logo for regular state and mobile devices -->
@@ -147,7 +147,7 @@
   <!-- Main Footer -->
   <footer class="main-footer">
     <!-- Default to the left -->
-    <strong>Copyright&copy;<%= Date.today.year %> <a href="#">Company</a>.</strong> All rights reserved.
+    <strong>Copyright&copy;<%= Date.today.year %> AMF Creative.</strong> All rights reserved.
   </footer>
 </div>
 <!-- ./wrapper -->
