--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,7 @@
 <html lang="<%= I18n.locale %>">
   <head>
     <%= page_title @site_name, @title %>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="canonical" href="<%= request.url %>" />
     <link rel="icon"      href="<%= @favicon %>" type="image/png"/>
     <%= meta_desc_tag @meta_desc %>
@@ -12,6 +13,8 @@
   </head>
 
   <body>
+    <%= render 'layouts/nav' %>
     <%= yield %>
+    <%= render 'layouts/footer' %>
   </body>
 </html>
