created frontend about-us page

--- a/app/views/inquiries/_form.html.erb
+++ b/app/views/inquiries/_form.html.erb
@@ -6,19 +6,19 @@
     </div>
     <%= name_order f, I18n.locale %>
     <div class="form-group col-sm-6">
-      <%= f.label :number, t('frontend.contact.number'+'*') %>
+      <%= f.label :number, t('frontend.contact.number')+'*' %>
       <%= f.text_field :number, class: "form-control" %>      
     </div>
     <div class="form-group col-sm-6">
-      <%= f.label :email, t('frontend.contact.email'+'*') %>
+      <%= f.label :email, t('frontend.contact.email')+'*' %>
       <%= f.text_field :email, class: "form-control" %> 
     </div>
     <div class="form-group col-sm-12">
-      <%= f.label :subject, t('frontend.contact.subject'+'*') %>
+      <%= f.label :subject, t('frontend.contact.subject')+'*' %>
       <%= f.text_field :subject, class: "form-control" %>
     </div>
     <div class="form-group col-sm-12">
-      <%= f.label :message, t('frontend.contact.message'+'*') %>
+      <%= f.label :message, t('frontend.contact.message')+'*' %>
       <%= f.text_area :message, class: "text-area form-control" %>
     </div>
     <div class="form-group col-sm-6">
