--- a/app/views/pages/homepage.html.erb
+++ b/app/views/pages/homepage.html.erb
@@ -38,7 +38,7 @@
         </div>
       <% end %>
       <div>
-        <%= link_to t('frontend.buttons.learnmore'), portfolios_path, class: 'btn btn-lg my-xs-20' %>
+        <%= link_to t('frontend.buttons.learnmore'), portfolios_path, class: 'btn btn-dark btn-lg my-xs-20' %>
       </div>
     </div>
   </div>
