--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -9,7 +9,7 @@
   </div>
 </section>
 
-<section class="bg-secondary">
+<section class="bg-secondary section-40">
   <div class="container">
     <div class="row">
       <div class="col-sm-8 col-sm-offset-2 text-center">
