--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -25,7 +25,7 @@
     </div>
   </div>
 </section>
-<section class="section-40">
+<section class="section-40 pt-xs-0">
   <div class="container-fluid bg-secondary">
     <div class="row flex-sm">
       <div class="col-sm-6 px-xs-0 bk-hidden-xs" style="background: url(<%= @about_contact_info.src.url %>) center">
@@ -39,7 +39,7 @@
   </div>
 </section>
 
-<section class="section-40">
+<section class="section-40 pt-xs-0">
   <div class="container">
     <div class="row">
       <h2 class="text-center"><%= t('frontend.about-us.message') %></h2>
