--- a/app/views/pages/homepage.html.erb
+++ b/app/views/pages/homepage.html.erb
@@ -11,7 +11,7 @@
   </container>
 </section>
 
-<section class="section-40">
+<section class="section-40 pt-xs-0">
   <div class="container">
     <div class="row text-center">
       <div class="my-xs-20">
@@ -44,7 +44,7 @@
   </div>
 </section>
 
-<section class="section-40">
+<section class="pb-xs-60">
   <div class="container">
     <div class="row">
       <div class="col-sm-12 text-center">
