updated portfolios index js

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,6 +17,7 @@
       <%= render 'layouts/nav' %>
       <%= yield %>
       <%= render 'layouts/footer' %>
+      <%= analytics_tracking @ga_id %>
     </div>
   </body>
 </html>
