--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -55,5 +55,8 @@
 <script>
   $( document ).on('turbolinks:load', function() {
     $('.venobox').venobox();
+    $('.slider-arrow-controls').flexslider({
+        controlNav: false
+    });
   });
 </script>
