added search console verifications

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,8 @@
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
     <%= csrf_meta_tags %>
+    <meta name="google-site-verification" content="CbQvWNJdE8ePSJZA1xubgyMhp-x7NonzxQG71zXe5Dw" />
+    <meta name="baidu-site-verification" content="iRS1gcXRP5" />
   </head>
 
   <body>
