--- a/app/views/pages/homepage.html.erb
+++ b/app/views/pages/homepage.html.erb
@@ -1,14 +1,14 @@
 <section class="full-screen" style="background-image: url(<%= @homepage_banner %>)"></section>
 
 <section class="section-40">
-  <container>
+  <div class="container">
     <row>
       <div class="col-sm-10 col-sm-offset-1 text-center">
         <h1>AMF Creative</h1>
         <p><%= @homepage_about %></p> 
       </div>
     </row>
-  </container>
+  </div class="container">
 </section>
 
 <section class="section-40 pt-xs-0">
