--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,6 +1,6 @@
 <section class="full-screen quarter" style="background-image: url(<%= @about_banner %>)"></section>
 
-<section class="section-40 text-center">
+<section class="section-40 pt-xs-20 text-center">
   <div class="container">
     <div class="row">
       <div class="col-sm-10 col-sm-offset-1">
@@ -47,3 +47,11 @@
     </div>
   </div>
 </section>
+
+<script type="text/javascript">
+  setTimeout(function(){
+    $('#notification').fadeOut('slow', function(){
+      $(this).remove();
+    })
+  }, 2500);
+</script>
