fixed OG image displaying issue

--- a/app/views/pages/homepage.html.erb
+++ b/app/views/pages/homepage.html.erb
@@ -11,7 +11,7 @@
   </div class="container">
 </section>
 
-<section class="section-40 pt-xs-0">
+<section class="pb-xs-20">
   <div class="container">
     <div class="row text-center">
       <div class="my-xs-20">
@@ -68,7 +68,6 @@
   </div>
   <!--end of container-->
 </section>
-
 <script>
   $( document ).on('turbolinks:load', function() {
     $('.venobox').venobox();
